Change Log:

v100 - January 27, 2026:

  - Added a new command line option to umrc-bridge to set the maximum
    number of reconnection attempts: -r[x] where x is the maximum number
    of failed attempts allowed. If not set, the default is 10. Specify
    a 0 for infinite attempts.
  - Basic twit list implemented. Added an additional help file called
    helptwit.txt containing usage.
  - Added a /nick chat command, which lets users edit their display name 
    (aka nick) without leaving chat.
  - uMRC now compiles for Linux. Many sections of code have been 
    refactored to allow cross-compiling for both Windows and Linux.
  - Backspace and DEL keys now both act like a backspace, in order to 
    ensure compatibility across platforms.
  - Improved text input handling all throughout umrc-client.
  - Fixed an issue where laying down on the PGUP or PGDN keys for too 
    long would crash the door. This required a modification to OpenDoors
    to redefine the behavior of these keys, so going forward a customized
    version of OpenDoors will be necessary to run the door, and will be
    included in the project files and releases. This fixes a particularly
    horrible way the PGUP and PGDN keys were handled, and the responsiveness
    of these keys is now much faster as a result. Fixing this issue did also
    lead to the realization that laying on the ESC key similarly crashes the 
    door, with no fix as of yet.
  - Updated LibreSSL libraries for Windows from 2.5.5 to 4.2.1, the latest 
    available version as of this update (from October 2025).  
  - Display the "Quit to" BBS name it all its pipe code colorful glory.
  - Chat message area now scrolls up the number of carriage returns that 
    was added while wrapping the message.
  - Fixed pipe-code color to ANSI translation for strings containing dim 
    colors immediately after background colors.
  - Fix for incoming and outgoing /ctcp commands.