@@ -1,5 +1,13 @@
 Change Log:
 
+v101 - TBA:
+
+  - Fixed an app crash that would occur in umrc-client when receiving
+    a packet with a longer-than-normal (allowed) body.
+  - Added a pipe color code guide to all text entry fields where pipe
+    color codes are allowed.
+  - Improved wrapping of long, unbroken chat text.
+
 v100 - January 27, 2026:
 
   - Added a new command line option to umrc-bridge to set the maximum
